# model-training

./: .gitignore  README.md  pyproject.toml
bert_for_seq_classification/: .env  README.md  class_set_dist.py  cls_head.py  data.py  full.py  hp_sweep.py  main.py  requirements.txt  sm_job.py
bert_for_seq_classification/data/00_sft/: bank_transaction_dataset.csv  test-dataset.csv  train-dataset.csv
bert_for_seq_classification/data/prompts/: 00_text_classification_bert_sft.json
bert_for_seq_classification/lib/: focal_loss.py  utils.py
scripts/: README.md  generate-data.py  scaffold-example-dir.py  upload-data.py
scripts/lib/: utils.py
text_classification_bert_sft/data/00_sft/test/: test-set.csv
text_classification_bert_sft/data/00_sft/train/: train-set.csv
text_classification_bert_sft/data/prompts/: 00_text_classification_bert_sft.json
