[project]
name = "example-trainings"
version = "0.0.0"
description = "A repository of training examples of various models, methods, and tasks."
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "langchain-text-splitters>=0.3.11",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "protobuf>=6.32.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
